--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "diamond"]
 	path = diamond
-	url = git@github.com:python-diamond/Diamond.git
+	url = https://github.com/python-diamond/Diamond.git
