updated default config

--- a/conf/diamond.conf
+++ b/conf/diamond.conf
@@ -40,6 +40,8 @@ keys = rotated_file
 
 ### Defaults options for all Handlers
 [[default]]
+
+
 [[ArchiveHandler]]
 # File to write archive log files
 log_file = /var/log/diamond/archive.log
@@ -93,7 +95,7 @@ days = 7
 # instance_prefix = instances
 
 # Default Poll Interval (seconds)
-# interval = 300
+interval = 60
 
 ################################################################################
 ### Options for logging
@@ -121,13 +123,14 @@ args = ('/var/log/diamond/diamond.log', 'midnight', 1, 7)
 
 [formatter_default]
 format = [%(asctime)s] [%(threadName)s] %(message)s
-datefmt =
+datefmt = '%Y-%m-%d %H:%M:%S'
 
 ################################################################################
 ### Options for config merging
-# [configs]
-# path = "/etc/diamond/configs/"
-# extension = ".conf"
+[configs]
+path = "/etc/diamond/configs/"
+extension = ".conf"
+
 #-------------------------------------------------------------------------------
 # Example:
 # /etc/diamond/configs/net.conf
@@ -135,4 +138,3 @@ datefmt =
 #
 # [[NetworkCollector]]
 # enabled = True
-
