--- a/conf/OntapClusterCollector.vfiler-8.template
+++ b/conf/OntapClusterCollector.vfiler-8.template
@@ -7,8 +7,9 @@
         password = @PASSWORD@
         login_type= HTTP # or HTTPS
         publish = 1
+        apiversion = 1.15
 
-                [[[aggregate=aggregate.@]]]
+                [[[aggregate=nodes.${node_name}.aggr.${instance_name}]]]
                 total_transfers = rate_ops
                 user_reads = rate_ops_reads
                 user_writes = rate_ops_writes
@@ -19,12 +20,28 @@
                 wv_fsinfo_blks_used = blocks_used
                 wv_fsinfo_blks_total = blocks_total
 
-                [[[processor=processor.@]]]
+                [[[disk=nodes.${node_name}.aggr.${raid_group}.${instance_name}]]]
+                disk_speed = rpm
+                total_transfers = rate_iops
+                user_reads = rate_ops_reads
+                user_writes = rate_ops_writes
+                cp_reads = rate_read_cp
+                disk_busy = pct_busy
+                io_pending = avg_iops_pending
+                io_queued = avg_iops_queued
+                user_write_blocks = rate_blocks_write
+                user_write_latency = avg_latency_micros_write
+                user_read_blocks = rate_blocks_read
+                user_read_latency = avg_latency_micros_read
+                cp_read_blocks = rate_blocks_cp_read
+                cp_read_latency = avg_latency_micros_cp_read
+
+                [[[processor=nodes.${node_name}.processor.${instance_name}]]]
                 processor_busy = pct_busy
                 processor_elapsed_time = time_elapsed
-		domain_busy = -
+                domain_busy = -
 
-                [[[system=@]]]
+                [[[system=nodes.${node_name}.${instance_name}]]]
                 nfs_ops = rate_ops_nfs
                 cifs_ops = rate_ops_cifs
                 fcp_ops = rate_ops_fcp
@@ -48,23 +65,7 @@
                 total_processor_busy = pct_processors_all_total_busy
                 cpu_elapsed_time2 = base_time_cpu_elapsed_total
 
-                [[[disk=disk.${raid_name}]]]
-                disk_speed = rpm
-                total_transfers = rate_iops
-                user_reads = rate_ops_reads
-                user_writes = rate_ops_writes
-                cp_reads = rate_read_cp
-                disk_busy = pct_busy
-                io_pending = avg_iops_pending
-                io_queued = avg_iops_queued
-                user_write_blocks = rate_blocks_write
-                user_write_latency = avg_latency_micros_write
-                user_read_blocks = rate_blocks_read
-                user_read_latency = avg_latency_micros_read
-                cp_read_blocks = rate_blocks_cp_read
-                cp_read_latency = avg_latency_micros_cp_read
-
-                [[[ifnet=net.@]]]
+                [[[ifnet=nodes.${node_name}.net.${instance_name}]]]
                 recv_packets = rate_pkts_recv
                 recv_errors = rate_recv_errors
                 send_packets = rate_pkts_send
@@ -74,7 +75,7 @@
                 recv_data = rate_bytes_recv
                 send_data = rate_bytes_send
 
-                [[[ext_cache_obj=ext_cache.@]]]
+                [[[ext_cache_obj=nodes.${node_name}.ext_cache.${instance_name}]]]
                 usage = pct_usage_blocks
                 accesses = cnt_delta_accesses
                 blocks = cnt_blocks
@@ -97,14 +98,14 @@
                 evicts_ref = rate_ref_evicts_blocks
                 invalidates = rate_invalidates_blocks
 
-                [[[wafl=@]]]
+                [[[wafl=nodes.${node_name}.${instance_name}]]]
                 name_cache_hit = rate_cache_hits
                 total_cp_msecs = cnt_msecs_spent_cp
                 wafl_total_blk_writes = rate_blocks_written
                 wafl_total_blk_readaheads = rate_blocks_readaheads
                 wafl_total_blk_reads = rate_blocks_read
 
-                [[[volume=volume.@]]]
+                [[[volume=vservers.${vserver_name}.volumes.${instance_name}]]]
                 total_ops = rate_ops
                 read_ops = rate_ops_read
                 write_ops = rate_ops_write
@@ -121,25 +122,37 @@
                 wv_fsinfo_blks_reserve = cnt_blocks_reserved
                 wv_fsinfo_blks_used = cnt_blocks_used
 
-                [[[nfsv3=nfsv3.@]]]
+                [[[nfsv3=vservers.${instance_name}.nfsv3]]]
                 nfsv3_ops = rate_ops_nfsv3
                 nfsv3_read_ops = rate_ops_nfsv3_read
                 nfsv3_write_ops = rate_ops_nfsv3_write
-                nfsv3_avg_write_latency_base = cnt_base_latency_nfsv3_avg_write
-                nfsv3_write_latency = avg_latency_ms_nfsv3_write
-                nfsv3_avg_read_latency_base = cnt_base_latency_nfsv3_avg_read
-                nfsv3_read_latency = avg_latency_ms_nfsv3_read
-                nfsv3_op_count = cnt_ops_null, cnt_ops_getattr, cnt_ops_setattr, cnt_ops_lookup, cnt_ops_access, cnt_ops_readlink, cnt_ops_read, cnt_ops_write, cnt_ops_create, cnt_ops_mkdir, cnt_ops_symlink, cnt_ops_mknod, cnt_ops_remove, cnt_ops_rmdir, cnt_ops_rename, cnt_ops_link, cnt_ops_readdir, cnt_ops_readdirplus, cnt_ops_fsstat, cnt_ops_fsinfo, cnt_ops_pathconf, cnt_ops_commit
-                nfsv3_op_percent = pct_ops_null, pct_ops_getattr, pct_ops_setattr, pct_ops_lookup, pct_ops_access, pct_ops_readlink, pct_ops_read, pct_ops_write, pct_ops_create, pct_ops_mkdir, pct_ops_symlink, pct_ops_mknod, pct_ops_remove, pct_ops_rmdir, pct_ops_rename, pct_ops_link, pct_ops_readdir, pct_ops_readdirplus, pct_ops_fsstat, pct_ops_fsinfo, pct_ops_pathconf, pct_ops_commit
-                
-                [[[cifs=cifs.@]]]
-                cifs_ops = rate_ops
-                cifs_op_count = cnt_delta_ops
-                cifs_read_ops = rate_ops_read
-                cifs_write_ops = rate_ops_write
-                cifs_latency = avg_latency_ms
-                cifs_write_latency = avg_latency_ms_writes
-                cifs_read_latency = avg_latency_ms_reads
+                read_total = cnt_ops_read
+                write_total = cnt_ops_write
+                write_avg_latency = avg_latency_micros_nfsv3_write
+                read_avg_latency = avg_latency_micros_nfsv3_read
+                nfsv3_write_throughput = rate_throughput_nfsv3_write
+                nfsv3_read_throughput = rate_throughput_nfsv3_read
+                nfsv3_throughput = rate_throughput_nfsv3
+                nfsv3_dnfs_ops = rate_ops_nfsv3_oracle
+
+                [[[iscsi_lif:vserver=vservers.${instance_name}.iscsi]]]
+                iscsi_read_ops = rate_ops_iscsi_read
+                iscsi_write_ops = rate_ops_iscsi_write
+                avg_write_latency = avg_latency_micros_iscsi_write
+                avg_read_latency = avg_latency_micros_iscsi_read
+                avg_latency = avg_latency_micros_iscsi
+                data_in_sent = cnt_blocks_recv
+                data_out_blocks = cnt_blocks_sent
+
+                [[[cifs=vservers.${instance_name}.cifs]]]
+                cifs_ops = rate_ops_cifs
+                cifs_read_ops = rate_ops_cifs_read
+                cifs_write_ops = rate_ops_cifs_write
+                cifs_latency = avg_latency_micros_cifs
+                cifs_write_latency = avg_latency_micros_cifs_write
+                cifs_read_latency = avg_latency_micros_cifs_read
+                connected_shares = cnt_cifs_connected_shares
+                reconnection_requests_total = cnt_cifs_reconnection_requests_total
 
 # Do not delete the next line
 #-END=@FILER@
