--- a/conf/OntapClusterCollector.vfiler-7.template
+++ b/conf/OntapClusterCollector.vfiler-7.template
@@ -6,7 +6,7 @@
         user = @USER@
         password = @PASSWORD@
         login_type= HTTP # or HTTPS
-        publish = 1
+        apiversion = 1.12
 
                 [[[aggregate=aggregate.@]]]
                 total_transfers = rate_ops
@@ -22,7 +22,7 @@
                 [[[processor=processor.@]]]
                 processor_busy = pct_busy
                 processor_elapsed_time = time_elapsed
-		domain_busy = -
+                #domain_busy = -
 
                 [[[system=@]]]
                 nfs_ops = rate_ops_nfs
@@ -131,7 +131,7 @@
                 nfsv3_read_latency = avg_latency_ms_nfsv3_read
                 nfsv3_op_count = cnt_ops_null, cnt_ops_getattr, cnt_ops_setattr, cnt_ops_lookup, cnt_ops_access, cnt_ops_readlink, cnt_ops_read, cnt_ops_write, cnt_ops_create, cnt_ops_mkdir, cnt_ops_symlink, cnt_ops_mknod, cnt_ops_remove, cnt_ops_rmdir, cnt_ops_rename, cnt_ops_link, cnt_ops_readdir, cnt_ops_readdirplus, cnt_ops_fsstat, cnt_ops_fsinfo, cnt_ops_pathconf, cnt_ops_commit
                 nfsv3_op_percent = pct_ops_null, pct_ops_getattr, pct_ops_setattr, pct_ops_lookup, pct_ops_access, pct_ops_readlink, pct_ops_read, pct_ops_write, pct_ops_create, pct_ops_mkdir, pct_ops_symlink, pct_ops_mknod, pct_ops_remove, pct_ops_rmdir, pct_ops_rename, pct_ops_link, pct_ops_readdir, pct_ops_readdirplus, pct_ops_fsstat, pct_ops_fsinfo, pct_ops_pathconf, pct_ops_commit
-                
+
                 [[[cifs=cifs.@]]]
                 cifs_ops = rate_ops
                 cifs_op_count = cnt_delta_ops
